Gateway_Load_Balancer/BaseVPC_Customer_option3.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: "(v1.1) AWS CFT to deploy a VPC with 2 subnets (Public, Private) in the same AZ."
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: VPC Configuration
      Parameters:
      - VPCCIDR
      - AZ
      - PublicSubnet
      - TgwId
      - TgwSecurityRouteTableId
      - TgwSecurityAttachmentId
      - Public1RouteTableId
      - TGW1RouteTableId
      - VPCe1Id
      - Public2RouteTableId
      - TGW2RouteTableId
      - VPCe2Id
Parameters:
  VPCCIDR:
    Type: String
    Default: 10.0.0.0/16
    Description: Provide a network CIDR for the VPC
  AZ:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: Select an Availability Zone for all resources
  PublicSubnet:
    Type: String
    Default: 10.0.1.0/24
    Description: Provide a network CIDR for PublicSubnet
  TgwId:
    Type: String
    Description: Provide a TransitGateway Id for the VPC to connect to
  TgwSecurityRouteTableId:
    Type: String
    Description: Provide a TransitGateway Security Route Table ID
  TgwSecurityAttachmentId:
    Type: String
    Description: Provide a TransitGateway Security Attachment ID
  Public1RouteTableId:
    Type: String
    Description: Provide a Public Route Table in AZ 1 for VPC CIDR Route
  TGW1RouteTableId:
    Type: String
    Description: Provide a VPCe1 Route Table in AZ 1 for VPC CIDR Route
  VPCe1Id:
    Type: String
    Description: Provide a VPC Endpoint in AZ 1 for route destination
  Public2RouteTableId:
    Type: String
    Description: Provide a Public Route Table in AZ 2 for VPC CIDR Route
  TGW2RouteTableId:
    Type: String
    Description: Provide a VPCe2 Route Table in AZ 2 for VPC CIDR Route
  VPCe2Id:
    Type: String
    Description: Provide a VPC Endpoint in AZ 2 for route destination
Resources:
  VPCID:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - VPC
  PublicSub:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCID
      CidrBlock:
        Ref: PublicSubnet
      AvailabilityZone:
        Ref: AZ
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - PublicSubnet
  ExtraSub:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCID
      CidrBlock: 192.168.0.16/28
      AvailabilityZone:
        Ref: AZ
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - ExtraSubnet
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - IGW
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPCID
      InternetGatewayId:
        Ref: InternetGateway
  TransitGatewayAtt:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      VpcId: !Ref VPCID
      SubnetIds:
        - Ref: PublicSub
      TransitGatewayId: !Ref TgwId
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - CustomerVpcTransitGateWayAttachment
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCID
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - PublicRouteTable
  SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSub
      RouteTableId:
        Ref: PublicRouteTable
  ExtraRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCID
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - ExtraRouteTable
  SubnetRouteTableAssociationExtra:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: ExtraSub
      RouteTableId:
        Ref: ExtraRouteTable
  TransitGatewayCustomerRouteTable:
    Type: AWS::EC2::TransitGatewayRouteTable
    Properties:
      TransitGatewayId: !Ref TgwId
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - TransitGatewayCustomerRouteTable
  TransitGatewaySecurityAssociation:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties:
      TransitGatewayAttachmentId: !Ref TransitGatewayAtt
      TransitGatewayRouteTableId: !Ref TransitGatewayCustomerRouteTable
  TgwRoute:
    Type: AWS::EC2::TransitGatewayRoute
    Properties:
      DestinationCidrBlock: !Ref VPCCIDR
      TransitGatewayAttachmentId: !Ref TransitGatewayAtt
      TransitGatewayRouteTableId: !Ref TgwSecurityRouteTableId
  TgwRoute1a:
    Type: AWS::EC2::TransitGatewayRoute
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      TransitGatewayAttachmentId: !Ref TgwSecurityAttachmentId
      TransitGatewayRouteTableId: !Ref TransitGatewayCustomerRouteTable
  Route1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref Public1RouteTableId
      DestinationCidrBlock: !Ref VPCCIDR
      VpcEndpointId: !Ref VPCe1Id
  Route1a:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref ExtraRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  Route2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref Public2RouteTableId
      DestinationCidrBlock: !Ref VPCCIDR
      VpcEndpointId: !Ref VPCe2Id
  Route3:
    DependsOn: TransitGatewayAtt
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      TransitGatewayId: !Ref TgwId
  Route4:
    DependsOn: TransitGatewayAtt
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref TGW1RouteTableId
      DestinationCidrBlock: !Ref VPCCIDR
      TransitGatewayId: !Ref TgwId
  Route5:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref TGW2RouteTableId
      DestinationCidrBlock: !Ref VPCCIDR
      TransitGatewayId: !Ref TgwId
Outputs:
  VPCID:
    Value:
      Ref: VPCID
    Description: VPC ID
  VPCCIDR:
    Value:
      Ref: VPCCIDR
    Description: CIDR for VPC
  AZ:
    Value:
      Ref: AZ
    Description: Availability Zone
  PublicID:
    Value:
      Ref: PublicSub
    Description: Subnet ID of Public Subnet
  PublicRouteTableID:
    Value:
      Ref: PublicRouteTable
    Description: Route Table ID of Public Route Table
  ExtraID:
    Value:
      Ref: ExtraSub
    Description: Subnet ID of Extra Subnet
  ExtraRouteTableID:
    Value:
      Ref: ExtraRouteTable
    Description: Route Table ID of Extra Route Table
